--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,19 @@
       <version>1.3.2</version>
     </dependency>
     <!--database end-->
+
+    <!--net start-->
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>3.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.10.3</version>
+    </dependency>
+    <!--net end-->
   </dependencies>
 
   <build>
