获取所有视频信息，并保存到数据库。

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,6 @@
 MongoUri=mongodb://localhost/?connectTimeoutMS=1000&socketTimeoutMS=1000&waitQueueTimeoutMS=1000
 MongoDatabaseName=91spider
+
+SiteHost=
+SiteVideoPath=/view_video.php
+SiteVideoListPath=/v.php
